get rid of unused files

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 					<div class = "col-lg-6">
 <!-- 					<p style="text-align: left; padding-top: 10px">Made by the TEC Team</p> -->
-<a class="ghost-button-short" href="#">VISIT 2016</a>
+<a class="ghost-button-short" href="http://teensexploringcode.github.io">VISIT 2016</a>
 					</div>
 
 					<div class = "col-lg-6">
