smoothscroll + temp way to make team section look better

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
  -->
 <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="navbar">
+<!--         <div class="navbar-header"> -->
+<!--           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><!-- Teens Exploring Code --></a>
-        </div>
+          </button> -->
+<!--           <a class="navbar-brand" href="#"></a>
+        </div> -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-						<li><a class="page-scroll" href="#about">About</a></li>
+                    <ul class="nav navbar-nav navbar-right">
+						<li><a class="smoothScroll" href="#about">About</a></li>
 <!-- 						<li><a class="page-scroll" href="#schedule">Schedule</a></li> -->
-						<li><a class="page-scroll" href="#faq">FAQ</a></li>
-						<li><a class="page-scroll" href="#people">The Team</a></li>
-						<li><a class="page-scroll" href="#sponsors">Sponsors</a></li>
+						<li><a class="smoothScroll" href="#faq">FAQ</a></li>
+						<li><a class="smoothScroll" href="#people">The Team</a></li>
+						<li><a class="smoothScroll" href="#sponsors">Sponsors</a></li>
 					</ul>
 				</div>
       </div>
@@ -155,13 +155,13 @@
 			</div>
 		</section>
 
-		<section class="no-padding" style = "; background-color: #3C2E53;" id="people">
+		<section class="" style = "; background-color: #3C2E53;" id="people">
         <!-- <div class="container-fluid"> -->
-        <div>
+    <!--     <div> -->
         	<h1 style="color:white; text-align: center; padding-bottom: 50px;">Meet Us</h1>
-            <div class="no-gutter container">
+            <div class="no-gutter container" style="display:inline">
 
-                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4" style="">
                     <div class="portfolio-box">
                         <img src="static/img/kelsey.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -177,7 +177,7 @@
                     </div>
                 </div>
 
-				<div class="col-lg-3 col-xs-4">
+				<div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/alice.jpg" class="img-responsive" alt="" style="">
                         <div class="portfolio-box-caption">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -210,7 +210,7 @@
                 </div>
 
 
-                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -226,7 +226,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
 
-                                <div class="col-lg-3 col-xs-4">
+                                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/julie.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -259,7 +259,7 @@
                 </div>
 <!--           <div class = "row no-gutter container"> -->
 
-                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/mihir.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -275,7 +275,7 @@
                     </div>
                 </div>
 
-                                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/stella.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -291,7 +291,7 @@
                     </div>
                 </div>
 
-                                <div class="col-lg-3 col-xs-4">
+                <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
                         <img src="static/img/me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -370,9 +370,9 @@
 			<div class="container">
 				<div class = "row">
 
-					<div class = "col-lg-6">
+					<div class = "col-lg-6" style="">
 <!-- 					<p style="text-align: left; padding-top: 10px">Made by the TEC Team</p> -->
-<a class="ghost-button-short" href="http://teensexploringcode.github.io">VISIT 2016</a>
+<a class="ghost-button-short" href="http://teensexploringcode.github.io" style="">VISIT 2016</a>
 					</div>
 
 					<div class = "col-lg-6">
@@ -403,10 +403,12 @@ $(".element").typed({
 </script>
 <script src = "typed.min.js"></script>
 <script src="typed.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="js/smoothscroll.js"></script>
   </body>
 </html>
-<!-- 
-<style type="text/css">
+
+<!-- <style type="text/css">
 	[cc escaped=”true” lang=”css”]* { outline: 2px dotted red }
 * * { outline: 2px dotted green }
 * * * { outline: 2px dotted orange }
