--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                 <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
-                        <img src="static/img/me.jpg" class="img-responsive" alt="">
+                        <img src="static/img/troll.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -228,7 +228,7 @@
 
                 <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
-                        <img src="static/img/me.jpg" class="img-responsive" alt="">
+                        <img src="static/img/photo.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -293,7 +293,7 @@
 
                 <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
-                        <img src="static/img/me.jpg" class="img-responsive" alt="">
+                        <img src="static/img/same.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
