--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<h3>How do teams work?</h3>
 						<p>Teams can have up to 4 people. If you’re a beginner, you’ll be able to form teams and develop project ideas with others at your skill level during the first Python workshop. For non-beginners, we’ll also have designated times for you to form teams and gather ideas.</p>
 						<h3>Are there prizes?</h3>
-						<p>Yes! <!-- Because we want to promote an atmosphere conducive to trying new things, prizes will not be project-based. But the prizes will be awesome and everyone will receive free swag (and knowledge!) regardless. --></p>
+						<p>Yes! More info on prizes will be released closer to the event date. Stay tuned!<!-- Because we want to promote an atmosphere conducive to trying new things, prizes will not be project-based. But the prizes will be awesome and everyone will receive free swag (and knowledge!) regardless. --></p>
 					</div>
 				</div>
 			</div>
