--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                 <div class="col-lg-2 col-xs-4">
                     <div class="portfolio-box">
-                        <img src="static/img/photo.jpg" class="img-responsive" alt="">
+                        <img src="static/img/isha.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
