--- a/index.html
+++ b/index.html
@@ -64,21 +64,11 @@
     </nav> 
 		<section id="banner" style=""><!--  style = "padding-top:11%" -->
 		<div class="event-panel container" style = "text-align: center !important;">
-
-<!-- 
-		<div class = "row"> -->
-	<!-- 		<div class = "col-lg-6"> -->
 				<p style="font-size:50px" class = "">Teens Exploring Code</p>
 				<h3 style = "text-align: center; !important; padding-bottom:20px">August 1 - 2, 2017</h3>
 				<a class="ghost-button-transition" href="#">LEARN MORE</a>
 				<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a>
-<!-- 			</div>
-			<div class = "col-lg-6"> -->
-<!-- 				<img src="static/img/logowhite.png" id="logo" style="margin-right:250px;float:right; height:180px; width:180px"> -->
-<!-- 			</div> -->
-<!-- 		<a href="https://tec2016.typeform.com/to/NvR0Xb" class="btn btn-primary btn-lg" target="_blank">Register!</a>  -->
 		</div>
-<!-- 		</div> -->
 		</section>
 
 
@@ -90,10 +80,8 @@
 			</div>
 			<div class = "col-lg-8">
 				<div class = "about-info">
-<!-- 					<h1 style="padding-bottom: 20px; text-align: left !important;">What is Teens Exploring Code?</h1> -->
 					<p>If you have quirky ideas you want to bring to life, or if you want to collaborate on something meaningful with other inquisitive teens like you, join us for Teens Exploring Code (TEC) 2017!</p>
 					<p>In 14 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking and powerful. With two unique tracks and various workshops throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
-			<!-- 		<hr> -->
 					<p>Beginners should attend the two Python workshops (one in the morning and one in the afternoon) to get started with programming and work on projects. Non-beginners are encouraged to attend other fun workshops offered later in the day.</p>
 				</div>
 			</div>
@@ -306,6 +294,22 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-2 col-xs-4">
+                    <div class="portfolio-box">
+                        <img src="static/img/calvin.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    asdf
+                                </div>
+                                <div class="project-name">
+                                    Calvin Yan
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 <!-- </div> -->
 
             </div>
@@ -314,52 +318,7 @@
 		
 		<footer class="parallax" id="sponsors" style="padding-top:50px;padding-bottom: 50px">
 		<div class = "container">
-<!-- 			<div class="container">
-				<h1>Our Sponsors</h1>
-				<div class="sponsor-container">
-					<div class="sponsor-row">
-						<div class="logo" id="pa">
-							<a href="http://www.cityofpaloalto.org/" target="_blank">
-								<img src="static/img/sponsors/pa.png">
-							</a>
-						</div>
-					</div>
-					<div class="sponsor-row">
-						<div class="logo" id="thinkfund">
-							<a href="http://www.cityofpaloalto.org/gov/depts/csd/recreation/teens/think_fund/think_fund_programs.asp" target="_blank">
-								<img src="static/img/sponsors/thinkfund.png">
-							</a>
-						</div>
-						<div class="logo logo-small" id="hackerfund">
-							<a href="https://hacker.fund/" target="_blank">
-								<img src="static/img/sponsors/hackerfund.png">
-							</a>
-						</div>
-						<div class="logo" id="treehacks">
-							<a href="https://www.treehacks.com/" target"_blank">
-								<img src="static/img/sponsors/treehacks.png">
-							</a>
-						</div>
-					</div>
-					<div class="sponsor-row">
-						<div class="logo" id="asianbox">
-							<a href="http://www.asianbox.com/" target="_blank">
-								<img src="static/img/sponsors/asianbox.png">
-							</a>
-						</div>
-						<div class="logo" id="comoesta">
-							<a href="http://comoestataqueria.net/" target"_blank">
-								<img src="static/img/sponsors/como-esta.jpg">
-							</a>
-						</div>
-					</div>
-				</div> -->
 				<div class = "row">
-
-<!-- 				<div class = "col-lg-6">
-				<h3 style="padding-bottom: 20px; text-align: left;">Interested in sponsoring or partnering? Check out our sponsorship packet for more information.</h3>
-				</div> -->
-
 				<div class = "col-lg-12" style="padding-top:0px;">
 								<a class="ghost-button-transition" href="static/sponsorship_packet.pdf">SPONSORSHIP PACKAGE</a>
 </div></div>
@@ -371,7 +330,6 @@
 				<div class = "row">
 
 					<div class = "col-lg-6" style="">
-<!-- 					<p style="text-align: left; padding-top: 10px">Made by the TEC Team</p> -->
 <a class="ghost-button-short" href="http://teensexploringcode.github.io/teens-exploring-code-2016/" style="">VISIT 2016</a>
 					</div>
 
@@ -382,7 +340,6 @@
 					<a href="mailto:teensexploringcode@gmail.com"><i class="fa fa-2x fa-envelope" style = "color:white !important; float: center; text-align: center;     display:inline-block;" aria-hidden="true"></i></a>
 					</div></div>
 				</div>
-<!-- 				<h3>Questions? Contact us at <a href="mailto:teensexploringcode@gmail.com" target="_blank">teensexploringcode@gmail.com</a></h3> -->
 			</div>
 		</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
