updating date and grid

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<section id="banner" style=""><!--  style = "padding-top:11%" -->
 		<div class="event-panel container" style = "text-align: center !important;">
 				<p style="font-size:50px" class = "">Teens Exploring Code</p>
-				<h3 style = "text-align: center; !important; padding-bottom:20px">August 1 - 2, 2017</h3>
+				<h3 style = "text-align: center; !important; padding-bottom:20px">February 17 - 18, 2017</h3>
 				<a class="ghost-button-transition" href="#">LEARN MORE</a>
 				<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a>
 		</div>
@@ -144,184 +144,122 @@
 		</section>
 
 		<section class="" style = "; background-color: #3C2E53;" id="people">
-        <!-- <div class="container-fluid"> -->
-    <!--     <div> -->
-        	<h1 style="color:white; text-align: center; padding-bottom: 50px;">Meet Us</h1>
-            <div class="no-gutter container" style="display:inline">
-
-                <div class="col-lg-2 col-xs-4" style="">
-                    <div class="portfolio-box">
-                        <img src="static/img/kelsey.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Founder
-                                </div>
-                                <div class="project-name">
-                                    Kelsey Wang
-                                </div>
+        <h1 style="color:white; text-align: center; padding-bottom: 50px;">Meet Us</h1>
+        <div class="container-fluid">
+        <div class = "row" style = "
+            margin-left: 10%;
+            margin-right: 10%;
+            display: grid;
+        ">
+                <div class="portfolio-box" style = "grid-column: 1">
+                    <img src="static/img/kelsey.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Founder
+                            </div>
+                            <div class="project-name">
+                                Kelsey Wang
                             </div>
                         </div>
                     </div>
                 </div>
 
-				<div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/alice.jpg" class="img-responsive" alt="" style="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Founder
-                                </div>
-                                <div class="project-name">
-                                    Alice Zhang
-                                </div>
+                <div class="portfolio-box">
+                    <img src="static/img/alice.jpg" class="img-responsive" alt="" style="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Founder
+                            </div>
+                            <div class="project-name">
+                                Alice Zhang
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/me.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Emily Yu
-                                </div>
+                <div class="portfolio-box">
+                    <img src="static/img/me.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                asdf
+                            </div>
+                            <div class="project-name">
+                                Emily Yu
                             </div>
                         </div>
                     </div>
                 </div>
 
-
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/troll.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Ashkay Bodla
-                                </div>
+                <div class="portfolio-box">
+                    <img src="static/img/troll.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                asdf
+                            </div>
+                            <div class="project-name">
+                                Ashkay Bodla
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/isha.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Isha Rajput
-                                </div>
+                <div class="portfolio-box">
+                    <img src="static/img/isha.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                asdf
+                            </div>
+                            <div class="project-name">
+                                Isha Rajput
                             </div>
                         </div>
                     </div>
                 </div>
 
-                                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/julie.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Julie Meng
-                                </div>
+                <div class="portfolio-box">
+                    <img src="static/img/mihir.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                asdf
                             </div>
-                        </div>
-                    </div>
-                </div>
-<!--           <div class = "row no-gutter container"> -->
-
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/mihir.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Mihir Singhal
-                                </div>
+                            <div class="project-name">
+                                Mihir Singhal
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/stella.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                   	Stella Wan
-                                </div>
+                <div class="portfolio-box">
+                    <img src="static/img/calvin.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                asdf
+                            </div>
+                            <div class="project-name">
+                                Calvin Yan
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/same.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Rishee Gupta
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-2 col-xs-4">
-                    <div class="portfolio-box">
-                        <img src="static/img/calvin.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    asdf
-                                </div>
-                                <div class="project-name">
-                                    Calvin Yan
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-<!-- </div> -->
 
             </div>
         </div>
     </section>
 		
-		<footer class="parallax" id="sponsors" style="padding-top:50px;padding-bottom: 50px">
+	<footer class="parallax" id="sponsors" style="padding-top:50px;padding-bottom: 50px">
 		<div class = "container">
 				<div class = "row">
-				<div class = "col-lg-12" style="padding-top:0px;">
-								<a class="ghost-button-transition" href="static/sponsorship_packet.pdf">SPONSORSHIP PACKAGE</a>
-</div></div>
+    				<div class = "col-lg-12" style="padding-top:0px;">
+    					<a class="ghost-button-transition" href="static/sponsorship_packet.pdf">SPONSORSHIP PACKAGE</a>
+                    </div>
+                </div>
 			</div></div>
 
 		</footer>
@@ -365,13 +303,28 @@ $(".element").typed({
   </body>
 </html>
 
-<!-- <style type="text/css">
-	[cc escaped=”true” lang=”css”]* { outline: 2px dotted red }
+<style type="text/css">
+/*	[cc escaped=”true” lang=”css”]* { outline: 2px dotted red }
 * * { outline: 2px dotted green }
 * * * { outline: 2px dotted orange }
 * * * * { outline: 2px dotted blue }
 * * * * * { outline: 1px solid red }
 * * * * * * { outline: 1px solid green }
 * * * * * * * { outline: 1px solid orange }
-* * * * * * * * { outline: 1px solid blue }[/cc]
-</style> -->
+* * * * * * * * { outline: 1px solid blue }[/cc]*/
+
+/*div {
+    border: 1px dashed red
+}*/
+
+@media (min-width:550px){
+    .row {
+        grid-template-columns: repeat(2, 1fr)
+    }
+}
+@media (min-width:758px){
+    .row{
+        grid-template-columns: repeat(4, 1fr)
+    }
+}
+</style>
