please please please please end this

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			</div>
 		</section>
 
-		<section class="" style = "; background-color: #3C2E53;" id="people">
+<!-- 		<section class="" style = "; background-color: #3C2E53;" id="people">
         <h1 style="color:white; text-align: center; padding-bottom: 50px;">Meet Us</h1>
         <div class="container-fluid">
         <div class = "row" style = "
@@ -184,7 +184,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                asdf
+                                Head Organizer
                             </div>
                             <div class="project-name">
                                 Emily Yu
@@ -198,7 +198,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                asdf
+                                Sponsorship
                             </div>
                             <div class="project-name">
                                 Ashkay Bodla
@@ -212,7 +212,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                asdf
+                                Logistics
                             </div>
                             <div class="project-name">
                                 Isha Rajput
@@ -226,7 +226,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                asdf
+                                Member
                             </div>
                             <div class="project-name">
                                 Mihir Singhal
@@ -240,7 +240,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                asdf
+                                Logistics
                             </div>
                             <div class="project-name">
                                 Calvin Yan
@@ -249,9 +249,85 @@
                     </div>
                 </div>
 
+                <div class="portfolio-box">
+                    <img src="static/img/troll.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Marketing
+                            </div>
+                            <div class="project-name">
+                                Ashley Gauba
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+        <section id="people" class="content-section text-center" style = "background-color: #3C2E53;">
+        <div class="download-section">
+            <div class="row">
+                <!-- <div class="col-lg-8"> -->
+                        <h3 style = "padding-bottom: 40px; color: white">Team</h3>
+
+                    <div class = "col-lg-2 col-lg-offset-3">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/me.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Emily Yu<br>Head Organizer</p>
+                    </div>
+                    <div class = "col-lg-2">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/kelsey.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Kelsey Wang<br>Founder</p>
+                    </div>
+                    <div class = "col-lg-2">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/alice.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Alice Zhang<br>Founder</p>
+                    </div>
+                <!-- </div> -->
+            </div>
+                        <div class="row">
+                <!-- <div class="col-lg-8"> -->
+                        <!-- <h3 style = "padding-bottom: 40px">Team</h3> -->
+
+                    <div class = "col-lg-2 col-lg-offset-3">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/same.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Ashkay Bodla<br>Sponsorship</p>
+                    </div>
+                    <div class = "col-lg-2">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/isha.png">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Isha Rajput<br>Logistics</p>
+                    </div>
+                    <div class = "col-lg-2">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/calvin.png">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Calvin Yan<br>Logistics</p>
+                    </div>
+                <!-- </div> -->
+            </div>
+                        <div class="row">
+                <!-- <div class="col-lg-8"> -->
+                        <!-- <h3 style = "padding-bottom: 40px">Team</h3> -->
+
+                    <div class = "col-lg-2 col-lg-offset-3">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/same.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Ashley Gauba<br>Marketing</p>
+                    </div>
+<!--                     <div class = "col-lg-2">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/mihir.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Patrick Zhong</p>
+                    </div>
+                    <div class = "col-lg-2">
+                        <img style = "border-radius: 50%;height:200px" src="static/img/mihir.jpg">
+                        <p style = "padding-top: 30px; padding-bottom: 30px">Adriano Hernandez</p>
+                    </div> -->
+                <!-- </div> -->
             </div>
         </div>
     </section>
+    <style>
+#people > div > div > div > p {
+    color: white;
+}
+</style>
 		
 	<footer class="parallax" id="sponsors" style="padding-top:50px;padding-bottom: 50px">
 		<div class = "container">
