--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                 <h3>How much does this cost?</h3>
                 <p>Nothing! TEC is free of charge, but we greatly appreciate any donations that would go towards supporting the event.</p>
                 <h3>How do I sign up?</h3>
-                <p>Signups will open closer to the event date. Check back for updates on registration!</p>
-                <!-- <p>Apply through this <a href="https://tec2016.typeform.com/to/NvR0Xb" target="_blank">online form</a>. Please only apply if you are <b>certain</b> that you will be able to attend for the whole time. You will get a confirmation email closer to the event securing your spot. We will be accepting people from all ranges of experience, so please answer the questions truthfully!</p> -->
+                <p>Apply through the registration link at the top of the page!</p>
             </div>
             <div class="col-md-6 col-xs-12 text-center">
                 <h3>What do I need to bring?</h3>
@@ -118,7 +117,7 @@
                 <h3>How do teams work?</h3>
                 <p>Teams can have up to 4 people. If you’re a beginner, you’ll be able to form teams and develop project ideas with others at your skill level during the first Python workshop. For non-beginners, we’ll also have designated times for you to form teams and gather ideas.</p>
                 <h3>Are there prizes?</h3>
-                <p>Yes! More info on prizes will be released closer to the event date. Stay tuned!<!-- Because we want to promote an atmosphere conducive to trying new things, prizes will not be project-based. But the prizes will be awesome and everyone will receive free swag (and knowledge!) regardless. --></p>
+                <p>Yes! More info on prizes will be released closer to the event date. Stay tuned!</p>
             </div>
         </div>
     </div>
