yeaaa SKOO VIKESSSSSSS

--- a/index.html
+++ b/index.html
@@ -73,13 +73,39 @@
             <div class = "col-lg-8">
                 <div class = "about-info">
                     <p>If you have quirky ideas you want to bring to life, or if you want to collaborate on something meaningful with other inquisitive teens like you, join us for Teens Exploring Code (TEC) 2017!</p>
-                    <p>In 14 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking and powerful. With two unique tracks and various workshops throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
-                    <p>Beginners should attend the two Python workshops (one in the morning and one in the afternoon) to get started with programming and work on projects. Non-beginners are encouraged to attend other fun workshops offered later in the day.</p>
+                    <p>In 24 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking and powerful. With two unique tracks and various workshops throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
+<section class = "parallax" style = "color:white;" id = "faq">
+    <div class="container">
+        <div class="row">
+            <h1>Schedule</h1>
+            <div class="col-md-6 col-xs-12 text-center">
+                <h3>Day 1: February 17</h3>
+                <p>11:00AM - Attendee Check In Starts</p>
+                <p>11:30AM - Opening Ceremony</p>
+                <p>12:00PM - Lunch/Team Formation</p>
+                <p>1:00PM - TEC: Git Workflow and Team Collaboration</p>
+                <p>3:00PM - TEC: Java (Programming Basics)</p>
+                <p>6:00PM - Dinner</p>
+                <p>8:00PM - Cup Stacking</p>
+            </div>
+            <div class="col-md-6 col-xs-12 text-center">
+                <h3>Day 2: February 18</h3>
+                <p>12:00AM - Midnight Surprise</p>
+                <p>8:00AM - Breakfast
+                <p>11:00AM - Judging Begins</p>
+                <p>11:30AM - Closing Ceremony and Awards</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <style>
 .parallax { 
@@ -95,7 +121,7 @@
 	background: rgba(248, 247, 216, 0.7);
 }
 </style>
-<section class = "parallax" style = "color:white;" id = "faq">
+<section class = "bg-primary" style = "background-color:#332448" id = "faq">
     <div class="container">
         <div class="row">
             <h1>FAQ</h1>
@@ -103,7 +129,7 @@
                 <h3>Who can attend?</h3>
                 <p>Participants ages 13-19 who have agreed to the <a style="font-weight:bold;text-decoration:underline;color:white !important" href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">MLH Code of Conduct</a> are welcome to attend! If you are out of this age range and wish to attend, please contact us.</p>
                 <h3>What’s the format of the event?</h3>
-                <p>You’ll join a team and work on an original project together throughout the whole day and present it at the end. For beginners, we provide two Python workshops that will get you started and let you form teams with others at your skill level. For non-beginners, you’ll begin on your projects right after forming teams, and can also attend interesting workshops throughout the day. <!-- Check the <a href="#schedule">schedule</a> for more info! --></p>
+                <p>You’ll join a team and work on an original project together throughout the whole day and present it at the end. We'll have fun and exciting workshops throughout the day, as indicated by the schedule. <!-- Check the <a href="#schedule">schedule</a> for more info! --></p>
                 <h3>How much does this cost?</h3>
                 <p>Nothing! TEC is free of charge, but we greatly appreciate any donations that would go towards supporting the event.</p>
                 <h3>How do I sign up?</h3>
@@ -115,7 +141,7 @@
                 <h3>What can I make?</h3>
                 <p>Anything you can! Web, mobile, hardware, or anything else you’re interested in.</h3>
                 <h3>How do teams work?</h3>
-                <p>Teams can have up to 4 people. If you’re a beginner, you’ll be able to form teams and develop project ideas with others at your skill level during the first Python workshop. For non-beginners, we’ll also have designated times for you to form teams and gather ideas.</p>
+                <p>Teams can be from a minimum of 2 people to a maximum of 4 people.</p>
                 <h3>Are there prizes?</h3>
                 <p>Yes! More info on prizes will be released closer to the event date. Stay tuned!</p>
             </div>
@@ -123,7 +149,7 @@
     </div>
 </section>
 
-<section id="people" class="content-section text-center" style = "background-color: #3C2E53;">
+<section id="people" class="parallax content-section text-center" style = "background-color: #3C2E53;">
     <div class="download-section">
         <div class="row">
             <h3 style = "padding-bottom: 40px; color: white">Team</h3>
@@ -164,11 +190,17 @@
 }
 </style>
 		
-<footer class="parallax" id="sponsors" style="padding-top:50px;padding-bottom: 50px">
+<footer class = "bg-primary" id="sponsors" style="padding-top:50px;padding-bottom: 50px;background-color:#332448">
 	<div class = "container">
 			<div class = "row">
-				<div class = "col-lg-12" style="padding-top:0px;">
+				<div class = "col-lg-12" style="padding-top:0px;padding-bottom: 50px">
 					<a class="ghost-button-transition" href="static/sponsorship_packet.pdf">SPONSORSHIP PACKAGE</a>
+                </div>
+            </div>
+            <div class = "row">
+                <div class = "col-lg-12" style="padding-top:0px;">
+                    <img src = "static/sponsor/palogo.png">
+                    <img src = "static/sponsor/thinkfund.png">
                 </div>
             </div>
 		</div>
